# ai-health-coach

./: README.md
backend/: health_agent.db  main.py  pyproject.toml
backend/api/: main.py
backend/api/v1/: __init__.py  chat.py  user.py
backend/db/: database.py  models.py
backend/lib/: agent.py  schema.py
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/components/chat/: agent-chat-message.tsx  onboarding.tsx  typing-indicator.tsx  user-chat.tsx
